gradients overflow fixed (#7)

--- a/public/styles/styleguide.css
+++ b/public/styles/styleguide.css
@@ -9,10 +9,12 @@
 }
 
 /* CSS RESET */
-* {
+*, *::before, *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    /* border:solid 1px red; */
 }
 
 :root {
